// lib/app/translations/en_US.dart

const Map<String, String> enUS = {
  'search_placeholder': 'What are you looking for?',
  'offers': 'Offers',
  'bills': 'Bills',
  'gaming': 'Gaming',
  'gift_vouchers': 'Gift',

  'favorites': 'Favorites',
...
  'offer_contents': 'Offer',
  'branches': 'Branches',
  'terms_of_use': 'Terms of Use',
  'merchant_info': 'Merchant',
  'sar': 'TN',
  'price': 'Price',
  'add_to_cart': 'Add to Cart',
  'coupon_included': 'Coupon Included',
  'whats_included': "What's Included",
  'your_price': 'Your Price',
  'was': 'Was',
  'you_save': 'You Save',
  'instant_confirmation': 'Instant confirmation after purchase',
...
